# myfinance

./: .env.example  .env.local  .gitignore  README.md  next.config.ts  package-lock.json  package.json  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: ci.yml  deploy.yml
api/: index.py
app/: database.py  main.py  models.py  schemas.py
docs/: DEPLOYMENT_JA.md
prisma/: dev.db  schema.prisma  seed.ts
prisma/migrations/20260402090011_init/: migration.sql
prisma/migrations/20260402_postgresql_init/: migration.sql
prisma/migrations/20260509_extended_accounting_features/: migration.sql
src/: middleware.ts  proxy.ts
src/app/: layout.tsx
src/app/(auth)/login/: page.tsx
src/app/(dashboard)/: page.tsx
src/app/(dashboard)/accounts/: actions.ts  page.tsx
src/app/(dashboard)/admin/: page.tsx
src/app/(dashboard)/attachments/: actions.ts  attachment-actions.tsx  page.tsx  upload-form.tsx
src/app/(dashboard)/bank/: actions.ts  bank-account-form.tsx  page.tsx
src/app/(dashboard)/budget/: actions.ts  budget-form.tsx  page.tsx  period-picker.tsx
src/app/(dashboard)/business-units/: actions.ts  client.tsx  page.tsx
src/app/(dashboard)/closing/: actions.ts  closing-buttons.tsx  (+2 more)
src/app/carwash/: data.ts  layout.tsx  page.tsx
src/components/layout/: header.tsx  sidebar.tsx
src/lib/: auth-helpers.ts  auth.ts  constants.ts  csv.ts  format.ts  prisma.ts
src/lib/validators/: account.ts  journal.ts  master.ts
src/services/: audit.service.ts  journal-rules.service.ts  journal.service.ts
src/types/: next-auth.d.ts
tests/: test_api.py
(+62 files in other folders)
